[package]
name = "payload"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Execute cargo commands from your code"
license = "MIT OR Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/payload"
readme = "README.md"
documentation = "https://docs.rs/payload"

[dependencies]
thiserror = "1.0.31"
target-lexicon = { version = "0.12.4", features = ["std"] }
time = { version = "0.3.11", features = ["parsing"] }
semver = "1.0.12"

[dev-dependencies]
color-eyre = "0.6.1"
