[package]
name = "payload"
version = "0.1.0-alpha.3"
edition = "2021"
description = "Execute cargo commands from your code"
license = "MIT OR Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/payload"
readme = "README.md"
documentation = "https://docs.rs/payload"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
thiserror = "1.0.31"
target-lexicon = { version = "0.12.4", features = ["std"] }
time = { version = "0.3.11", features = ["parsing"] }
semver = "1.0.12"
serde = { version = "1.0.137", optional = true, features = ["derive"] }
serde_json = { version = "1.0.82", optional = true }
serde_with = { version = "1.14.0", optional = true }
which = "4.2.5"

[dev-dependencies]
color-eyre = "0.6.1"
target-lexicon-macros = "0.1.0-alpha.1"

[features]
json = ["dep:serde", "dep:serde_json", "dep:serde_with"]
