[package]
name = "payload"
version = "0.1.0"
edition = "2021"
description = "Execute cargo commands from your code"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/morr0ne/payload"
readme = "README.md"
documentation = "https://docs.rs/payload"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
thiserror = "1.0.40"
target-lexicon = { version = "0.12.7", features = ["std"] }
time = { version = "0.3.21", features = ["parsing"] }
semver = "1.0.17"
serde = { version = "1.0.163", optional = true, features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
serde_with = { version = "3.0.0", optional = true }
which = "4.4.0"

[dev-dependencies]
color-eyre = "0.6.2"
target-lexicon-macros = "0.1.0-alpha.1"

[features]
json = ["dep:serde", "dep:serde_json", "dep:serde_with"]
